--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
  }
 /********** Base styles **********/
 h1 {
+  font-size: 1.75em;
   margin: 20px;
   text-align: center;
 }
@@ -111,10 +112,12 @@ body {
 }
 
 p {
- 
+  font-size: 1em;
+  padding: 5%;
   border: 3px solid black;
   background-color: lightgray;
   width: 95%;
+  height: 90%;
   padding-top: 10%;
   margin-right: auto;
   margin-left: auto;
@@ -125,15 +128,43 @@ div#container {
   position: relative;
   
 }
-#head{
+#head1{
+  font-size: 1.25em;
  position: relative;
- left: 67.7%;
- top: 40px;
+ left: 67%;
+ top: 45px;
 
-width: 20%;
+width: 30%;
 background-color: pink;
 text-align: center;
 border-left: 3px solid black;
 border-bottom: 3px solid black;
 
 }
+#head2{
+  font-size: 1.25em;
+ position: relative;
+ left: 67%;
+ top: 45px;
+color: white;
+width: 30%;
+background-color: red;
+text-align: center;
+border-left: 3px solid black;
+border-bottom: 3px solid black;
+
+}
+#head3{
+  font-size: 1.25em;
+ position: relative;
+ left: 66.8%;
+ top: 45px;
+
+width: 30%;
+background-color: lightgoldenrodyellow;
+text-align: center;
+border-left: 3px solid black;
+border-bottom: 3px solid black;
+
+}
+
